--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/styles.scss"
+                "src/styles/styles.scss",
+                "node_modules/primeicons/primeicons.css",
+                "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+                "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
@@ -75,7 +78,7 @@
               "browserTarget": "cinemaTheaters:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "production"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
